# sports-card-ai-agent

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BEFORE_AFTER.md  CONTRIBUTING.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.production  IMPROVEMENTS.md  IMPROVEMENTS_GUIDE.md  INSTALACION_DOCKER.md  LAUNCH_PLAN.md  PRODUCTION.md  QUICK_START.md  QUICK_START_PRODUCTION.md  RAILWAY_MANUAL.md  README.md  RESUMEN_FINAL.md  ROADMAP_PRODUCCION.md  TEST_SIN_DOCKER.md  all_sports_test_v3.txt  all_sports_test_v6.txt  app.py  app_backup.py  capacitor.config.json  check_portfolio.py  current_requirements.20260203-133000.txt  debug_ebay_500.py  debug_ebay_api.py  debug_soccer_tool_verbose.py  deploy-production.sh  deploy-railway-final.sh  deploy-railway-with-token.sh  deploy-railway.sh  (+51 more)
.github/workflows/: deploy.yml
.streamlit/: config.toml
android/app/: build.gradle
plans/: 130point_integration_plan.md
scripts/: capture_railway_login.py  database_migration_fix.py  delete_all_users.py  final_capture.py  health-check.py  migrate-production-db.sh  migrate_auth.py  migrate_db_v2.py  migrate_to_postgres.py  test_db_v2.py  test_real_data.py
src/: mcp_server.py
src/agents/: market_research_agent.py  player_analysis_agent.py  price_analyzer_agent.py  supervisor_agent.py  trading_strategy_agent.py
src/mcp/: server.py  tools.py
src/ml/: price_predictor.py
src/models/: card.py  db_models.py  one_thirty_point.py
src/static/: manifest.json  service-worker.js  styles.css
src/tools/: ball_dont_lie_tool.py  base_tool.py  card_vision_tool.py  ebay_tool.py  mlb_stats_tool.py  nba_stats_tool.py  nfl_stats_tool.py  nhl_stats_tool.py  one_thirty_point_tool.py  sentiment_tool.py  soccer_stats_tool.py  sports_news_tool.py  tcgplayer_tool.py
src/utils/: auth_utils.py  config.py  database.py  db_helper.py  exceptions.py  logging_config.py  rate_limiter.py  realtime_sync.py  repository.py  scraping_utils.py  stats_cache.py  ui_components.py
tests/: conftest.py
tests/unit/agents/: test_market_research_agent.py  test_supervisor_agent.py  test_trading_strategy_agent.py
tests/unit/models/: test_card.py  test_price_predictor.py
(+3 files in other folders)
